--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
     country: 'Francie/Itálie',
     height: '4808 m',
     range: 'Alpy',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1531366936337-7c912a4589a7?w=1200',
     description: 'Mont Blanc, "Bílá hora", je nejvyšší horou Alp a západní Evropy. Nachází se na hranici mezi Francií a Itálií. První zdokumentovaný výstup proběhl v roce 1786. Hora je velmi populární mezi horolezci a turisty z celého světa.'
 },
@@ -247,6 +248,7 @@
     country: 'Švýcarsko',
     height: '4634 m',
     range: 'Pennine Alpy',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Dufourspitze je nejvyšší horou Švýcarska a součástí masívu Monte Rosa. Nachází se na hranici mezi Švýcarskem a Itálií v Pennine Alpách. První výstup proběhl v roce 1855. Hora je pojmenována po švýcarském generálu Guillaume-Henri Dufourovi.'
 },
@@ -256,6 +258,7 @@
     country: 'Rakousko',
     height: '3798 m',
     range: 'Východní Alpy',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Grossglockner je nejvyšší horou Rakouska a nachází se v Vysokých Taurách. Jeho název znamená "Velký zvoník". První výstup byl proveden v roce 1800. Hora je obklopena ledovci, z nichž nejznámější je Pasterze, největší ledovec východních Alp.'
 },
@@ -265,6 +268,7 @@
     country: 'Španělsko',
     height: '3718 m',
     range: 'Kanárské ostrovy',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1551632811-561732d1e306?w=1200',
     description: 'Teide je nejvyšší horou Španělska a nachází se na ostrově Tenerife na Kanárských ostrovech. Jedná se o aktivní sopku, která je zároveň třetí největší sopečnou strukturou na světě. Je nejnavštěvovanější národní park ve Španělsku a od roku 2007 je součástí světového dědictví UNESCO.'
 },
@@ -274,6 +278,7 @@
     country: 'Španělsko',
     height: '3479 m',
     range: 'Sierra Nevada',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?w=1200',
     description: 'Mulhacén je nejvyšší horou španělského kontinentu a celého Iberského poloostrova. Nachází se v pohoří Sierra Nevada v Andalusii. Hora je pojmenována podle maurského krále Muley Hacena. Z vrcholu je za dobrého počasí vidět Středozemní moře a severní Afriku.'
 },
@@ -283,6 +288,7 @@
     country: 'Německo',
     height: '2962 m',
     range: 'Wetterstein',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Zugspitze je nejvyšší horou Německa a nachází se v Bavorských Alpách na hranici s Rakouskem. Vrchol je přístupný lanovkou i ozubnicovou dráhou. První zdokumentovaný výstup proběhl v roce 1820. Z vrcholu jsou nádherné výhledy na čtyři země: Německo, Rakousko, Itálii a Švýcarsko.'
 },
@@ -292,6 +298,7 @@
     country: 'Andorra',
     height: '2943 m',
     range: 'Pyreneje',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Coma Pedrosa je nejvyšší horou Andorry a nachází se v severozápadní části země v Pyrenejích. Výstup na vrchol je relativně nenáročný a oblíbený mezi turisty. Z vrcholu jsou krásné výhledy na pyrenejskou krajinu a údolí Andorry.'
 },
@@ -301,6 +308,7 @@
     country: 'Bulharsko',
     height: '2925 m',
     range: 'Rila',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Musala je nejvyšší horou Bulharska a celého pohoří Balkán. Nachází se v pohoří Rila. Název hory pochází z arabského "má ša alláh", což znamená "jak Bůh chtěl". V zimě je vrchol pokryt sněhem, v létě nabízí krásné výhledy na okolní krajinu.'
 },
@@ -310,6 +318,7 @@
     country: 'Řecko',
     height: '2918 m',
     range: 'Olymp',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1601485175726-38840db1abe8?w=1200',
     description: 'Olymp je nejvyšší horou Řecka a v řecké mytologii sídlem bohů. Nachází se v severním Řecku blízko pobřeží Egejského moře. Hora má několik vrcholů, přičemž nejvyšším je Mytikas. První oficiální výstup byl proveden v roce 1913.'
 },
@@ -319,6 +328,7 @@
     country: 'Slovinsko',
     height: '2864 m',
     range: 'Julské Alpy',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Triglav je nejvyšší horou Slovinska a národním symbolem země, zobrazený i na slovinské vlajce. Nachází se v Julských Alpách v Triglavském národním parku. Název znamená "tříhlavý" podle tří vrcholů. První výstup byl proveden v roce 1778.'
 },
@@ -328,6 +338,7 @@
     country: 'Albánie/Severní Makedonie',
     height: '2764 m',
     range: 'Šar planina',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Korab je nejvyšší horou Albánie a Severní Makedonie a nachází se na hranici mezi těmito dvěma státy. Je součástí pohoří Šar planina. Hora nabízí náročné horolezecké výzvy a krásné přírodní scenérie s bohatou flórou a faunou.'
 },
@@ -337,6 +348,7 @@
     country: 'Slovensko',
     height: '2655 m',
     range: 'Vysoké Tatry',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Gerlachovský štít je nejvyšší horou Slovenska a celých Karpat. Nachází se ve Vysokých Tatrách. První výstup na vrchol byl proveden v roce 1834. Hora je oblíbená mezi horolezci a nabízí nádherné výhledy na tatranskou krajinu.'
 },
@@ -346,6 +358,7 @@
     country: 'Lichtenšteinsko',
     height: '2599 m',
     range: 'Rätikon',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Grauspitz je nejvyšší horou Lichtenšteinska a nachází se na hranici se Švýcarskem v pohoří Rätikon. Výstup na vrchol je nenáročný a vhodný pro turisty. Z vrcholu jsou krásné výhledy na Alpy a údolí Rýna.'
 },
@@ -355,6 +368,7 @@
     country: 'Rumunsko',
     height: '2544 m',
     range: 'Fagaraš',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Moldoveanu je nejvyšší horou Rumunska a nachází se v pohoří Fagaraš, části Jižních Karpat. Hora je pojmenována po řece Moldoveanu. Výstup na vrchol je oblíbený mezi rumunským i turisty a nabízí nádherné výhledy na karpatskou krajinu.'
 },
@@ -364,6 +378,7 @@
     country: 'Černá Hora',
     height: '2522 m',
     range: 'Durmitor',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Bobotov Kuk je nejvyšší horou Černé Hory a součástí masivu Durmitor, který je zapsán na seznamu světového dědictví UNESCO. Hora nabízí spektakulární výhledy na okolní hory a kaňony. Je oblíbeným cílem turistů i horolezců.'
 },
@@ -373,6 +388,7 @@
     country: 'Polsko/Slovensko',
     height: '2499 m',
     range: 'Vysoké Tatry',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Rysy jsou nejvyšší horou Polska a nachází se na hranici se Slovenskem ve Vysokých Tatrách. Jedná se o třívrcholovou horu, přičemž severozápadní vrchol leží v Polsku. Výstup na Rysy je jedním z nejoblíbenějších turistických cílů v Tatrách.'
 },
@@ -382,6 +398,7 @@
     country: 'Norsko',
     height: '2469 m',
     range: 'Jotunheimen',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Galdhøpiggen je nejvyšší horou Norska a celé Skandinávie. Nachází se v pohoří Jotunheimen. Název znamená "vrchol nad Galdesåen". První výstup byl proveden v roce 1850. Hora je pokryta ledovci a nabízí úžasné výhledy na norskou krajinu.'
 },
@@ -391,6 +408,7 @@
     country: 'Bosna a Hercegovina',
     height: '2386 m',
     range: 'Sutjeska',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Maglić je nejvyšší horou Bosny a Hercegoviny a nachází se na hranici se Černou Horou v národním parku Sutjeska. Hora je součástí Dinarských Alp. U jejího úpatí se nachází ledovcové jezero Trnovačko, jedno z nejkrásnějších v regionu.'
 },
@@ -400,6 +418,7 @@
     country: 'Portugalsko',
     height: '2351 m',
     range: 'Azory',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Ponta do Pico je nejvyšší horou Portugalska a nachází se na ostrově Pico na Azorách. Jedná se o stratovulkán, který je stále považován za aktivní. Výstup na vrchol je oblíbený mezi turisty a nabízí úžasné výhledy na Atlantský oceán a okolní ostrovy.'
 },
@@ -409,6 +428,7 @@
     country: 'Srbsko',
     height: '2169 m',
     range: 'Stara planina',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Midžor je nejvyšší horou Srbska (mimo Kosovo) a nachází se na hranici s Bulharskem v pohoří Stara planina (Balkán). Hora je pokryta sněhem velkou část roku a je oblíbeným cílem pro turistiku i zimní sporty.'
 },
@@ -418,6 +438,7 @@
     country: 'Island',
     height: '2110 m',
     range: 'Öræfajökull',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1504233529578-6d46baba6d34?w=1200',
     description: 'Hvannadalshnúkur je nejvyšší horou Islandu a nachází se v národním parku Vatnajökull. Jedná se o vrchol sopečného masívu Öræfajökull, který je pokryt ledovcem. Poslední erupce sopky byla v roce 1727.'
 },
@@ -427,6 +448,7 @@
     country: 'Švédsko',
     height: '2097 m',
     range: 'Skandinávské pohoří',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Kebnekaise je nejvyšší horou Švédska a nachází se v Laponsku severně od polárního kruhu. Hora má dva vrcholy - jižní ledovcový a severní skalní. Výška ledovcového vrcholu kolísá v závislosti na množství sněhu a ledu.'
 },
@@ -436,6 +458,7 @@
     country: 'Ukrajina',
     height: '2061 m',
     range: 'Černohora',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Hoverla je nejvyšší horou Ukrajiny a nachází se v Karpatech v pohoří Černohora. Hora je velmi populární turistickou destinací a výstup na vrchol je relativně nenáročný. Z vrcholu jsou krásné výhledy na okolní karpatskou krajinu.'
 },
@@ -445,6 +468,7 @@
     country: 'Kypr',
     height: '1952 m',
     range: 'Troodos',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Olympos (nebo Chionistra) je nejvyšší horou Kypru a nachází se v pohoří Troodos v centru ostrova. V zimních měsících je vrchol pokryt sněhem a funguje zde menší lyžařské středisko. Hora má vojenské a telekomunikační zařízení na vrcholu.'
 },
@@ -454,6 +478,7 @@
     country: 'Portugalsko',
     height: '1993 m',
     range: 'Serra da Estrela',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Torre v Serra da Estrela je nejvyšším bodem kontinentálního Portugalska. Nachází se v pohoří Serra da Estrela, nejdelším a nejvyšším pohoří v kontinentálním Portugalsku. Oblast je známá pro výrobu sýra a v zimě zde funguje lyžařské středisko.'
 },
@@ -463,6 +488,7 @@
     country: 'Chorvatsko',
     height: '1831 m',
     range: 'Dinarské Alpy',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Dinara je nejvyšší horou Chorvatska a nachází se na hranici s Bosnou a Hercegovinou v Dinarských Alpách, které jsou po ní pojmenovány. Výstup na vrchol je oblíbený mezi turisty a nabízí panoramatické výhledy na okolní oblast.'
 },
@@ -472,6 +498,7 @@
     country: 'Česko',
     height: '1603 m',
     range: 'Krkonoše',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Sněžka je nejvyšší horou České republiky a celých Krkonoš. Nachází se na hranici s Polskem. Na vrchol vede lanovka z české strany. Hora je velmi populární turistickou destinací s charakteristickou kulatou meteorologickou stanicí na vrcholu.'
 },
@@ -481,6 +508,7 @@
     country: 'Velká Británie',
     height: '1345 m',
     range: 'Grampianské hory',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Ben Nevis je nejvyšší horou Velké Británie a nachází se ve Skotsku nedaleko města Fort William. Název znamená "jedovatá hora". Výstup na vrchol je oblíbený mezi turisty, přestože počasí na vrcholu bývá nepříznivé většinu roku.'
 },
@@ -490,6 +518,7 @@
     country: 'Finsko',
     height: '1324 m',
     range: 'Skandinávské pohoří',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Halti je nejvyšší horou Finska a nachází se na hranici s Norskem v Laponsku. Skutečný vrchol leží v Norsku, nejvyšší bod na finském území má výšku 1324 m. Hora je součástí Skandinávského pohoří.'
 },
@@ -499,6 +528,7 @@
     country: 'Irsko',
     height: '1038 m',
     range: 'Macgillycuddy\'s Reeks',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Carrauntoohil je nejvyšší horou Irska a nachází se v jihozápadní části ostrova v pohoří Macgillycuddy\'s Reeks v hrabství Kerry. Výstup na vrchol je oblíbený mezi turisty, přestože trasa může být náročná a nebezpečná při špatném počasí.'
 },
@@ -508,6 +538,7 @@
     country: 'Maďarsko',
     height: '1014 m',
     range: 'Mátra',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Kékes je nejvyšší horou Maďarska a nachází se v pohoří Mátra v severním Maďarsku. Na vrcholu se nachází televizní věž a turistické zařízení. Výstup je nenáročný a oblast je oblíbená pro turistiku a v zimě pro lyžování.'
 },
@@ -517,6 +548,7 @@
     country: 'San Marino',
     height: '739 m',
     range: 'Apeniny',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Monte Titano je nejvyšším bodem San Marina a na jeho vrcholu se nachází tři středověké věže, které jsou symbolem této nejstarší republiky na světě. Hora je součástí Apeninského pohoří a nabízí krásné výhledy na okolní italskou krajinu.'
 },
@@ -526,6 +558,7 @@
     country: 'Moldavsko',
     height: '430 m',
     range: 'Kodry',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Bălănești je nejvyšším bodem Moldavska a nachází se v centrální části země v pahorkatině Kodry. Moldavsko je převážně nížinná země, takže jeho nejvyšší bod není výraznou horou, ale spíše kopcem.'
 },
@@ -535,6 +568,7 @@
     country: 'Estonsko',
     height: '318 m',
     range: 'Haanja',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Suur Munamägi, "Velké Vejcové Hory", je nejvyšším bodem Estonska a nachází se na jihovýchodě země v oblasti Haanja. Na vrcholu stojí rozhledna, ze které jsou krásné výhledy na okolní estonskou krajinu.'
 },
@@ -544,6 +578,7 @@
     country: 'Lotyšsko',
     height: '312 m',
     range: 'Vidzeme',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Gaiziņkalns je nejvyšším bodem Lotyšska a nachází se ve východní části země v oblasti Vidzeme. Jedná se spíše o kopec než horu. Na vrcholu je rozhledna a místo je oblíbené pro turistiku a v zimě pro běžkování.'
 },
@@ -553,6 +588,7 @@
     country: 'Litva',
     height: '294 m',
     range: 'Ašmenos vysočina',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Aukštojas je nejvyšším bodem Litvy a nachází se na východě země nedaleko hranic s Běloruskem. Název znamená "Vysoký". Na vrcholu stojí památník s údaji o výšce a poloze nejvyšších bodů pobaltských států.'
 },
@@ -562,6 +598,7 @@
     country: 'Bělorusko',
     height: '346 m',
     range: 'Běloruská hřebenovka',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Dziaržynskaja (dříve Dziaržynskaja hara) je nejvyšším bodem Běloruska a nachází se v západní části země. Hora je pojmenována po Felix Dziaržynskym. Bělorusko je převážně rovinou země, takže nejvyšší bod není výraznou horou.'
 },
@@ -571,6 +608,7 @@
     country: 'Dánsko',
     height: '171 m',
     range: 'Jutský poloostrov',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Møllehøj je nejvyšším přírodním bodem Dánska a nachází se v centrální části Jutského poloostrova. Dánsko je jednou z nejploššších zemí Evropy. Møllehøj převýšil dříve považovaný nejvyšší bod Yding Skovhøj až po přesnějších měřeních.'
 },
@@ -580,6 +618,7 @@
     country: 'Monako',
     height: '161 m',
     range: 'Monako',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200',
     description: 'Chemin des Révoires je nejvyšším bodem Monaka, druhého nejmenšího státu světa. Nachází se v severní části knížectví v části Mont Agel. Monako je kompaktní městský stát na pobřeží Středozemního moře.'
 },
@@ -589,6 +628,7 @@
     country: 'Malta',
     height: '253 m',
     range: 'Malta',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1526129318478-62ed807ebdf9?w=1200',
     description: 'Ta\' Dmejrek je nejvyšším bodem Malty a nachází se v západní části hlavního ostrova. Malta je ostrovní stát se spíše plochou krajinou. Nejvyšší bod je nenápadný kopec v zemědělské oblasti.'
 },
@@ -598,6 +638,7 @@
     country: 'Vatikán',
     height: '75 m',
     range: 'Vatikán',
+    date: '1.1.2000',
     image: 'https://images.unsplash.com/photo-1531572753322-ad063cecc140?w=1200',
     description: 'Nejvyšší bod Vatikánu se nachází ve Vatikánských zahradách na Vatikánském pahorku. Vatikán je nejmenším uznávaným státem světa a jeho území je téměř kompletně urbanizované, takže nemá skutečné hory ani výrazné kopce.'
 }
@@ -613,7 +654,7 @@
             li.dataset.mountain = mountain.id;
             li.innerHTML = `
                 <span class="mountain-name">${mountain.name}</span>
-                <span class="mountain-meta">${mountain.country} • ${mountain.height}</span>
+                <span class="mountain-meta">${mountain.country} • ${mountain.height} • ${mountain.date}</span>
             `;
             mountainList.appendChild(li);
         });
