--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     
     <script>
         const korunaEvropy = [
-            {id: 'mont-blanc', name: 'Mont Blanc', country: 'Francie/Itálie', height: '4809 m', range: 'Alpy', date: '31.8.2007', image: null, description: 'Mont Blanc je nejvyšší horou Alp a západní Evropy.', category: 'koruna-evropy'},
+            {id: 'mont-blanc', name: 'Mont Blanc', country: 'Francie/Itálie', height: '4809 m', range: 'Alpy', date: '31.8.2007', image: https://github.com/suchanek76/website/blob/main/assets/images/MontBlanc2x3.JPG, description: 'Mont Blanc je nejvyšší horou Alp a západní Evropy.', category: 'koruna-evropy'},
             {id: 'dufourspitze', name: 'Dufourspitze', country: 'Švýcarsko', height: '4634 m', range: 'Alpy', date: null, image: null, description: 'Dufourspitze je nejvyšší hora Švýcarska.', category: 'koruna-evropy'},
             {id: 'grossglockner', name: 'Grossglockner', country: 'Rakousko', height: '3798 m', range: 'Alpy', date: '30.6.2025', image: null, description: 'Grossglockner je nejvyšší hora Rakouska.', category: 'koruna-evropy'},
             {id: 'mulhacen', name: 'Mulhacén', country: 'Španělsko', height: '3479 m', range: 'Sierra Nevada', date: '10.9.2022', image: null, description: 'Mulhacén je nejvyšší hora španělského kontinentu. Nejvyšší hora Tenerife je Pico de Teide (3718 m).', category: 'koruna-evropy'},
