--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         }
         
         .mountain-card:hover {
-            transform: translateY(-20px);
+            transform: scale(1.05);
             border-color: #3498db;
         }
         
