--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         .hero {
             height: 100vh;
             background: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%, rgba(26,35,50,0.8) 70%, #1a2332 100%), 
-                        url('https://github.com/suchanek76/website/blob/main/assets/images/background.jpg') center/cover;
+                        url('https://raw.githubusercontent.com/suchanek76/website/main/assets/images/background.jpg') center/cover;
             display: flex;
             flex-direction: column;
             align-items: center;
