--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         .hero-button:hover {
             background: #3498db;
             color: white;
-            transform: translateY(-3px);
+            transform: scale(1.1);
             box-shadow: 0 8px 20px rgba(0,0,0,0.3);
         }
         
@@ -80,7 +80,7 @@
             position: relative;
             aspect-ratio: 3/2;
             background: #394d61;
-            border: 3px dashed #5a7187;
+            border: 3px #5a7187;
             overflow: hidden;
             cursor: pointer;
             transition: all 0.3s;
