--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             position: relative;
             aspect-ratio: 3/2;
             background: #394d61;
-            border: 3px #5a7187;
+            border: 3px line #5a7187;
             overflow: hidden;
             cursor: pointer;
             transition: all 0.3s;
