--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             transition: all 0.3s;
             text-decoration: none;
             display: inline-block;
+            border-radius: 8px;
         }
         
         .hero-button:hover {
