--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             position: relative;
             aspect-ratio: 3/2;
             background: #394d61;
-            border: 3px line #5a7187;
+            border: none;
             overflow: hidden;
             cursor: pointer;
             transition: all 0.3s;
