--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
         .hero {
             height: 50vh;
             background: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%, rgba(26,35,50,0.8) 70%, #1a2332 100%), 
-                        url('https://raw.githubusercontent.com/suchanek76/website/main/assets/images/background.jpg') center/contain no-repeat;
+                        url('https://raw.githubusercontent.com/suchanek76/website/main/assets/images/background.jpg') center/cover;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             position: relative;
+            background-position: top center;
         }
         
         .hero h1 {
