--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         
         .hero {
             height: 50vh;
-            background: url('https://raw.githubusercontent.com/suchanek76/website/main/assets/images/background.jpg') center/cover;
+            background: linear-gradient(to bottom, rgba(0,0,0,0.3) 50%, rgba(26,35,50,0.8) 95%,)
+                        url('https://raw.githubusercontent.com/suchanek76/website/main/assets/images/background.jpg') center/cover;
             display: flex;
             flex-direction: column;
             align-items: center;
