--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         
         .mountains-section {
             padding: 4rem 2rem;
-            background: linear-gradient(180deg, #1a2332 0%, #2c3e50 100%);
+            background: #1a2332;
         }
         
         .mountains-grid {
