--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
         
         .mountains-section {
             padding: 4rem 2rem;
-            background: #1a2332;
+            background: transparent;
+            position: relative;
+            z-index: 10;
         }
         
         .mountains-grid {
