--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Segoe UI', Montserrat, Geneva, Verdana, sans-serif;
             color: white;
             background: #1a2332;
         }
@@ -64,7 +64,7 @@
         }
         
         .mountains-section {
-            padding: 4rem 2rem;
+            padding: -20rem 2rem;
             background: transparent;
             position: relative;
             z-index: 10;
