--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
         
         .mountains-section {
-            padding: -20rem 2rem;
+            padding: 4rem 2rem;
             background: transparent;
             position: relative;
             z-index: 10;
@@ -72,7 +72,7 @@
         
         .mountains-grid {
             max-width: 1400px;
-            margin: 0 auto;
+            margin: -20rem auto;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 2rem;
