--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
             background: transparent;
             position: relative;
             z-index: 10;
+            margin: -20rem auto 0 auto;
         }
         
         .mountains-grid {
             max-width: 1400px;
-            margin: -20rem auto;
+            margin: 0 auto;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 2rem;
