--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             align-items: center;
             justify-content: center;
             position: relative;
+            background-position: top;
         }
         
         .hero h1 {
