--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 </head>
 <body>
     <section class="hero">
-        <h1>Vzít batoh na záda a jít...</h1>
+        <h1>**Vzít batoh na záda a jít...**</h1>
         <div class="hero-buttons">
             <button class="hero-button" onclick="scrollToSection('koruna-evropy')">Koruna Evropy 14/42</button>
             <button class="hero-button" onclick="scrollToSection('alpske-ctyrtisicovky')">Alpské čtyřtisícovky 5/82</button>
