--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         
         body {
-            font-family: 'Montserrat ExtraBold', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Montserrat Bold', Tahoma, Geneva, Verdana, sans-serif;
             color: white;
             background: #1a2332;
         }
