--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         
         body {
-            font-family: 'Montserrat Bold', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Montserrat', Tahoma, Geneva, Verdana, sans-serif;
             color: white;
             background: #1a2332;
         }
@@ -20,7 +20,7 @@
         .hero {
             height: 100vh;
             background: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%, rgba(26,35,50,0.95) 100%),
-                        url('https://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg') center/cover;
+                        url('https://raw.githubusercontent.com/suchanek76/website/main/images/background10.jpg') center/cover;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -33,7 +33,7 @@
             font-size: 4.5rem;
             margin-bottom: 2rem;
             text-shadow: 2px 2px 8px rgba(0,0,0,0.8);
-            font-weight: 300;
+            font-weight: 600;
             letter-spacing: 2px;
         }
         
