--- a/index.html
+++ b/index.html
@@ -464,10 +464,10 @@
             {id: 'alps-82', name: 'Les Droites', country: 'Francie', height: '4000 m', range: 'Aiguille Verte', date: null, image: null, description: 'Poslední čtyřtisícovka Alp.', category: 'alpske-ctyrtisicovky'}
         ];
  
-    // 30 fotek Nepálu bez popisu
+    // 40 fotek Nepálu bez popisu
     const Nepal = Array.from({ length: 30 }, (_, i) => ({
         id: `nepal-${i + 1}`,
-        image: `https://source.unsplash.com/800x600/?nepal,mountains,${i + 1}`
+        image: `https://github.com/suchanek76/website/blob/main/images/Nepal,${i + 1}`
     }));
 
     let currentCategory = 'koruna-evropy';
